RESOLVED FIXED116212
[CSS Blending] Background layers should not blend with the content behind the element
https://bugs.webkit.org/show_bug.cgi?id=116212
Summary [CSS Blending] Background layers should not blend with the content behind the...
Mihai Tica
Reported 2013-05-16 01:23:57 PDT
Reimplement background blending to match the change in the CSS Blending and Compositing spec. From https://dvcs.w3.org/hg/FXTF/rawfile/tip/compositing/index.html#mix-blend-mode: "Each background image must blend with the element's background images that are below it and the element's background color. Background image must not blend with the content that is behind the element."
Attachments
Patch (1.46 MB, patch)
2013-05-16 02:03 PDT, Mihai Tica
no flags
Mihai Tica
Comment 1 2013-05-16 02:03:46 PDT
WebKit Commit Bot
Comment 2 2013-05-21 23:26:04 PDT
Comment on attachment 201935 [details] Patch Clearing flags on attachment: 201935 Committed r150503: <http://trac.webkit.org/changeset/150503>
WebKit Commit Bot
Comment 3 2013-05-21 23:26:06 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.