Source/WebCore: Update the background blending implementation to match the changes done in the spec. This implies that background color blending is removed and the background layers won't blend with the content behind the element any more. https://bugs.webkit.org/show_bug.cgi?id=116212

Patch by Mihai Tica <mitica@adobe.com> on 2013-05-21
Reviewed by Dean Jackson.

* rendering/RenderBox.cpp:
(WebCore::RenderBox::paintFillLayers):
* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::paintFillLayerExtended):

LayoutTests: Updating element background blending to conform to the changes in the spec.
This implies that the background layers won't longer blend with the content
behind the element.
Removing the background color tests, as background color blending is no longer
a valid use case, also modified the current background image tests.
https://bugs.webkit.org/show_bug.cgi?id=116212

Patch by Mihai Tica <mitica@adobe.com> on 2013-05-21
Reviewed by Dean Jackson.

* css3/compositing/effect-background-blend-mode-color-expected.txt: Removed.
* css3/compositing/effect-background-blend-mode-color.html: Removed.
* css3/compositing/effect-background-blend-mode-color2-expected.txt: Removed.
* css3/compositing/effect-background-blend-mode-color2.html: Removed.
* css3/compositing/effect-background-blend-mode-stacking-expected.png: Removed.
* css3/compositing/effect-background-blend-mode-stacking.html:
* platform/mac/css3/compositing/effect-background-blend-mode-color-expected.png: Removed.
* platform/mac/css3/compositing/effect-background-blend-mode-color2-expected.png: Removed.
* platform/mac/css3/compositing/effect-background-blend-mode-expected.png:
* platform/mac/css3/compositing/effect-background-blend-mode-stacking-expected.png:

Canonical link: https://commits.webkit.org/134904@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150503 268f45cc-cd09-0410-ab3c-d52691b4dbfc